<resources>
    <string name="app_name">Segundo_Proyecto</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="entrar">Entrar</string>
    <string name="parrot">Parrot</string>
    <string name="constraint">Constraint</string>
    <string name="seleccione_layout">Seleccione layout</string>
    <string name="relative">Relative</string>
    <string name="frame">Frame</string>
    <string name="grind">Grind</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="Aparecer">Button</string>
    <string name="Flappy">flappy</string>
    <string name="ocultar">Ocultar</string>
    <string name="amarillo">Amarillo</string>
    <string name="azul">Azul</string>
    <string name="Amarillo">amarillo</string>
    <string name="Azul">azul</string>
    <string name="seleccione_color">Seleccione color</string>
    <string name="Pollito">pollito</string>
    <string name="Android_Verde">android_verde</string>
    <string name="Glayout">glayout</string>
    <string name="switchtema">Switchtema</string>
    <string name="tema">Tema</string>
    <string name="numero1">Numero1</string>
    <string name="bsumar">bSumar</string>
    <string name="brestar">Restar</string>
    <string name="numero2">Numero2</string>
    <string name="Resultado">0</string>
    <string name="sumar">sumar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="calcular">Calcular</string>
    <string name="color_azul">Color azul</string>
    <string name="hola">Hola</string>
</resources>