<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="MostrarAm"
    tools:context=".Constraint">

    <CheckBox
        android:id="@+id/Cazul"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:onClick="MostrarAm"
        android:text="@string/azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <CheckBox
        android:id="@+id/Camarillo"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginEnd="84dp"
        android:onClick="MostrarAm"
        android:text="@string/amarillo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Cazul"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccione_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="344dp"
        android:layout_height="453dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/Vamarillo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Amarillo"
            android:onClick="MostrarAm"
            android:visibility="invisible"
            app:srcCompat="@drawable/istockphoto_463331331_612x612"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/Vazul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Azul"
            android:onClick="MostrarAm"
            android:visibility="invisible"
            app:srcCompat="@drawable/placa_azul_x" />

        <ImageView
            android:id="@+id/Vver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Android_Verde"
            android:onClick="MostrarAm"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_android_svgrepo_com" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>